--- a/src/components/organisms/PopularProducts/PopularProducuts.module.css
+++ b/src/components/organisms/PopularProducts/PopularProducuts.module.css
@@ -1,4 +1,11 @@
+.cardGroup {
+    justify-content: center;
+    margin-top: 5rem;
+}
+
 .card:hover {
-    background-color: #fafafa;
     cursor: pointer;
+    z-index: 1000;
+    box-shadow: 0 6px 5px rgba(0, 0, 0, 0.1);
+    transition: 0.2s ease-in-out;
 }
