--- a/src/components/molecules/ClusterDetails/ClusterDetails.module.css
+++ b/src/components/molecules/ClusterDetails/ClusterDetails.module.css
@@ -6,6 +6,8 @@
 
 .cardHeader {
     display: flex;
+    border-radius: 0.25rem;
+    transition: padding 0.2s ease-in-out;
 }
 
 .cardHeader:hover {
@@ -14,4 +16,10 @@
 
 .card.focused {
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+}
+
+.card.focused .cardHeader {
+    background-color: #F9FAFB;
+    padding: 1.2rem;
+    transition: all 0.2s ease-in-out;
 }
